; ModuleID = '/home/carl/AnghaBench/libuv/docs/code/uvwget/extr_main.c_check_multi_info.c'
source_filename = "/home/carl/AnghaBench/libuv/docs/code/uvwget/extr_main.c_check_multi_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@curl_handle = common dso_local global i32 0, align 4
@CURLINFO_EFFECTIVE_URL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"%s DONE\0A\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"CURLMSG default\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_multi_info() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  br label %4

4:                                                ; preds = %33, %0
  %5 = load i32, i32* @curl_handle, align 4
  %6 = call %struct.TYPE_3__* @curl_multi_info_read(i32 %5, i32* %3)
  store %struct.TYPE_3__* %6, %struct.TYPE_3__** %2, align 8
  %7 = icmp ne %struct.TYPE_3__* %6, null
  br i1 %7, label %8, label %34

8:                                                ; preds = %4
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %29 [
    i32 128, label %12
  ]

12:                                               ; preds = %8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @CURLINFO_EFFECTIVE_URL, align 4
  %17 = call i32 @curl_easy_getinfo(i32 %15, i32 %16, i8** %1)
  %18 = load i8*, i8** %1, align 8
  %19 = call i32 @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %18)
  %20 = load i32, i32* @curl_handle, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @curl_multi_remove_handle(i32 %20, i32 %23)
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @curl_easy_cleanup(i32 %27)
  br label %33

29:                                               ; preds = %8
  %30 = load i32, i32* @stderr, align 4
  %31 = call i32 @fprintf(i32 %30, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %32 = call i32 (...) @abort() #3
  unreachable

33:                                               ; preds = %12
  br label %4

34:                                               ; preds = %4
  ret void
}

declare dso_local %struct.TYPE_3__* @curl_multi_info_read(i32, i32*) #1

declare dso_local i32 @curl_easy_getinfo(i32, i32, i8**) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @curl_multi_remove_handle(i32, i32) #1

declare dso_local i32 @curl_easy_cleanup(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
